# printf

./: .clang-tidy  BUILDING.md  CMakeLists.txt  CMakePresets.json  HACKING.md  README.md
.github/workflows/: ci.yml  lint-commits.yml
cmake/: dev-mode.cmake  install-config.cmake  install-rules.cmake  variables.cmake
include/printf/: printf.hpp
source/: printf.cpp
test/: CMakeLists.txt
test/source/: printf_test.cpp
